--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <title>Redux Users</title>
+    <title>Users</title>
   </head>
   <body>
     <div class="container" id="root"></div>
